--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ baseurl: /426-21-blog
 # Title of the Site
 title: Stat 426 - Fall 2021
 # Description of the Site
-description: Data Science Methods and Application in Statistics
+description: Class Blog and Projects
 # URL of Image of the Site
 site-image: /assets/images/logo.png
 # Keywords of the Site
