--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ markdown: kramdown
 # URL of the Site
 url: '' #https://esnt.github.io
 # Base URL of the Site (i.e., Name of the Repository in which the Site is hosted)
-baseurl: /426-21-blog
+baseurl: #  /426-21-blog
 
 # Title of the Site
 title: Stat 426 - Fall 2021
