remove contact from page

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ facebook_username:
 twitter_username:
 instagram_username:
 linkedin_username:
-github_username:  stat426-fall2021
+github_username:  
 youtube_channel_id:
 reddit_username:
 behance_username:
