Update links and add new main pic

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ favicon-url:
 
 # URL of the Image of Custom Hero Image (i.e., the image in the background of the very first section of the Homepage)
 #heroimage: https://images.pexels.com/photos/220444/pexels-photo-220444.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940
-heroimage: /assets/images/flowers.jpg
+heroimage: /assets/images/david-clode-vb-3qEe3rg8-unsplash.jpg
 
 # Social Media and Contact
 # If you don't want to use any icon, you can leave them blank.
@@ -28,7 +28,7 @@ facebook_username:
 twitter_username:
 instagram_username:
 linkedin_username:
-github_username:  
+github_username:
 youtube_channel_id:
 reddit_username:
 behance_username:
