--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,3 +8,11 @@ the_devslot:
     name: The DevsLot
     email: thedevslot@gmail.com
     web: https://github.com/thedevslot
+mrmorgan17:
+    name: Matthew Morgan
+    email: matthewrmorgan17@gmail.com
+    web: https://github.com/mrmorgan17
+sk563:
+    name: Spencer Kimball
+    email: spencercowleykimball@gmail.com
+    web: https://github.com/spencercowleykimball
