--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,7 +12,7 @@ mrmorgan17:
     name: Matthew Morgan
     email: matthewrmorgan17@gmail.com
     web: https://github.com/mrmorgan17
-sk563:
+skimball_22:
     name: Spencer Kimball
     email: spencercowleykimball@gmail.com
     web: https://github.com/spencercowleykimball
