--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -32,18 +32,18 @@ andrustn:
     name: Trevor Andrus
     email: andrus.tn@gmail.com
     web: https://andrustn.github.io
-nan:
+mmesservy:
     name: Melissa Messervy
     email: meliss.messervy21@gmail.com
-    web: nan
+    web: https://github.com/melbug
 cgreenhalgh:
     name: Connor Greenhalgh
     email: cgreen640@gmail.com
     web: https://github.com/CRGreenhalgh
-nan:
+tmanjson:
     name: Truman Jeppson
-    email: nan
-    web: nan
+    email: tmanjson@gmail.com
+    web: https://github.com/TrumanJeppson
 sonnyg97:
     name: Sonny George
     email: nan
