--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title: Stat 426 - Fall 2021
 # Description of the Site
 description: Class Blog and Projects
 # URL of Image of the Site
-site-image: /assets/images/logo.png
+site-image: /assets/images/david-clode-vb-3qEe3rg8-unsplash.jpg # /assets/images/logo.png
 # Keywords of the Site
 site-keywords: BYU, Data Science, Projects
 # URL for the Image of custom Favicon
@@ -47,7 +47,7 @@ author-name: Stat 426 Class
 author-image: /assets/images/logo.png
 author-image-alt: /assets/images/Stat426.png
 # 60 Words About the Author
-author-about: Statistics 426 is a class taught in the Statistics Department at Brigham Young University.  In this class, we cover the data science pipeline including collecting and wrangling data, version control, analyzing, evaluating and interpreting machine learning models, and ethics and bias.
+author-about: Statistics 426 is a class taught in the Statistics Department at Brigham Young University.  In this class, we cover the data science pipeline including collecting and wrangling data, version control, analyzing, evaluating and interpreting machine learning models, and ethics and bias.  The class this semester is taught by Shannon Tass.
 
 author-about-small:  Data science methods and applications
 author-url: https://github.com/stat426-fall2021
