Fix little erros on student posts

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -16,7 +16,7 @@ joshegladwell:
     name: Josh Gladwell
     email: joshegladwell@gmail.com
     web: https://github.com/joshegladwell
-sk563:
+skimball_22:
     name: Spencer Kimball
     email: spencercowleykimball@gmail.com
     web: https://github.com/spencercowleykimball
@@ -197,6 +197,6 @@ fseng98:
     email: fseng98@gmail.com
     web: https://github.com/fseng98
 gavinw3:
-    name: Gavin Williams 
+    name: Gavin Williams
     email: gmw72718@gmail.com
     web: nan
