Fix more small errors

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -68,7 +68,7 @@ erstewart14:
     name: Rosie Stewart
     email: erstewart14@gmail.com
     web: https://github.com/erstewart14
-katesmit:
+18katesmit:
     name: Kate Smith
     email: 18kate.smith@gmail.com
     web: https://github.com/18katesmit
