--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -96,10 +96,10 @@ jace899:
     name: Jace Ritchie
     email: ritchie.jace@gmail.com
     web: https://github.com/JR-Development21
-rdm99:
+rexmoss:
     name: Rex Moss
     email: rexxmoss@gmail.com
-    web: nan
+    web: https://github.com/rexmoss
 gmm2410:
     name: Gerardo Meza Mera
     email: meza.mera.gerardo@gmail.com
