Fix all author names and websites

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -84,10 +84,10 @@ sjacobr:
     name: Jake Szendre
     email: jacob.r.szendre@gmail.com
     web: https://github.com/sjacobr
-josh_degn:
+jhdegn:
     name: Josh Degn
     email: jhdegn@gmail.com
-    web: nan
+    web: https://github.com/jhdegn
 tscotn:
     name: Scot Nielson
     email: scotnielson616@gmail.com
