Fix small errors

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -136,7 +136,7 @@ cmason30:
     name: Colin Mason
     email: colinpetermason@gmail.com
     web: https://github.com/cmason30
-brycef:
+BryceFuller1:
     name: Bryce Fuller
     email: brycefuller9@gmail.com
     web: https://github.com/BryceFuller1
@@ -156,15 +156,15 @@ dteuscher1:
     name: David Teuscher
     email: dteuscher.37.12@gmail.com
     web: https://github.com/dteuscher1
-nan:
+jpablo:
     name: Pablo Higueros
     email: nan
-    web: nan
+    web: https://github.com/jpablohigueros
 germckay:
     name: McKay Gerratt
     email: mckayger@gmail.com
     web: https://github.com/germckay
-ashfiala:
+ashtynfiala:
     name: Ashtyn Fiala
     email: fialaae@gmailcom
     web: https://github.com/ashtynfiala
@@ -172,10 +172,10 @@ mimanjh:
     name: Jacob Hunsaker
     email: jacob.hunsaker96@gmail.com
     web: https://github.com/mimanjh
-nan:
+ghman12345:
     name: Jeong Heon You
     email: nan
-    web: nan
+    web: https://github.com/ghman12345
 rachel-hammy:
     name: Rachel Hamilton
     email: rachelhamilton47@gmail.com
