Fix double post

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -144,7 +144,7 @@ cal-barker:
     name: Cal Barker
     email: calbarker1@gmail.com
     web: https://github.com/cal-barker
-tpettit6:
+TPettit621:
     name: Tyler Pettit
     email: tyler.pettit82@gmail.com
     web: https://github.com/TPettit621
