Fix minor errors

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -196,7 +196,7 @@ fseng98:
     name: Felicia Seng
     email: fseng98@gmail.com
     web: https://github.com/fseng98
-gavinw3:
+gmw72721:
     name: Gavin Williams
     email: gmw72718@gmail.com
-    web: nan
+    web: https://github.com/gmw72721
