--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -20,10 +20,10 @@ skimball_22:
     name: Spencer Kimball
     email: spencercowleykimball@gmail.com
     web: https://github.com/spencercowleykimball
-nan:
+gwcarr:
     name: Garrett Carr
     email: nan
-    web: nan
+    web: https://github.com/gwcarr
 emliu:
     name: Emily Liu
     email: emliu0811@gmail.com
